login form working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,13 @@
         <li><a routerLink="/signup">Sign Up</a></li>
         <li><a routerLink="/login">Log In</a></li>
       </span>
-      <span *ngIf="true">
+      <span *ngIf="">
         <li><a routerLink="/logout">Log Out</a></li>
         <li>Hello,</li>
       </span>
     </ul>
   </div>
 </nav>
-
 
 <div class="container">
   <router-outlet></router-outlet>
