--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,8 @@
-<p>signup works!</p>
+<h1>sign up</h1>
+<form>
+  <h2>Register a User</h2>
+  <input [(ngModel)]="userName" type="text" name="userName" placeholder="User Name"/>
+  <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>
+  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+  <input (click)="registerUser()" type="submit" value="Register"/>
+</form>
