--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<form>
+  <h2>Login a User</h2>
+  <input [(ngModel)]="userName" type="text" name="userName" placeholder="User Name"/>
+  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+  <input (click)="loginUser()" type="submit" value="Log In"/>
+</form>
