--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <li><a routerLink="/signup">Sign Up</a></li>
         <li><a routerLink="/login">Log In</a></li>
       </span>
-      <span *ngIf="">
+      <span *ngIf="true">
         <li><a routerLink="/logout">Log Out</a></li>
         <li>Hello,</li>
       </span>
