created genre get and post methods, and service

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,3 +1,4 @@
 <h1>Books</h1>
-<a routerLink="/author" >Authors</a>
-
+<h5><a routerLink="/author">Authors</a></h5>
+<h5><a routerLink="/genre">Genres</a></h5>
+<h5><a routerLink="/publisher">Publishers</a></h5>
