--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
   </div>
 </nav>
 
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
