--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,11 @@
       </span>
       <span *ngIf="this.currentUser">
         <li><a routerLink="/logout">Log Out</a></li>
-        <li>Hello,</li>
+        <li>Hello, {{this.currentUser}}</li>
       </span>
     </ul>
   </div>
 </nav>
-
-<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 
 <div class="container">
   <router-outlet></router-outlet>
