--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -5,9 +5,12 @@
     <div *ngIf="genres">
       <h4>All Genres</h4>
       <ul>
-        <li *ngFor="let genre of genres">
-          {{genre.name}} -- {{genre.description}}
+        <div class="listing" *ngFor="let genre of genres">
+        <li>
+          <h2>{{genre.name}}</h2>
+          {{genre.description}} <br>
         </li>
+        </div>
       </ul>
     </div>
   </section>
